<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1E1E1E"
    tools:context=".ui.home.HomeFragment">

    <!-- TODO: Update blank fragment layout -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/header"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/welcome"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="26dp"
                    android:layout_marginTop="26dp"
                    android:text="@string/good_morning"
                    android:fontFamily="@font/inter_bold"
                    android:textColor="@color/white"
                    android:textSize="25sp"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@+id/welcome"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@+id/welcome"
                    android:layout_marginStart="60dp"
                    android:src="@drawable/profile"/>

                <HorizontalScrollView
                    android:id="@+id/category"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/welcome"
                    android:scrollbars="none"
                    android:layout_marginTop="20dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginEnd="26dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/romance"
                            android:fontFamily="@font/inter_light"
                            android:layout_marginStart="20dp"
                            android:background="@drawable/bg_text"
                            android:paddingHorizontal="10dp"
                            android:paddingVertical="8dp"
                            android:textColor="@color/white"
                            android:gravity="center"
                            android:padding="10dp"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/feel_good"
                            android:fontFamily="@font/inter_light"
                            android:layout_marginStart="10dp"
                            android:background="@drawable/bg_text"
                            android:paddingHorizontal="10dp"
                            android:paddingVertical="8dp"
                            android:textColor="@color/white"
                            android:gravity="center"
                            android:padding="10dp"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/podcast"
                            android:fontFamily="@font/inter_light"
                            android:layout_marginStart="10dp"
                            android:background="@drawable/bg_text"
                            android:paddingHorizontal="10dp"
                            android:paddingVertical="8dp"
                            android:textColor="@color/white"
                            android:gravity="center"
                            android:padding="10dp"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:background="@drawable/bg_text"
                            android:gravity="center"
                            android:padding="10dp"
                            android:paddingHorizontal="10dp"
                            android:paddingVertical="8dp"
                            android:text="@string/feel_good"
                            android:fontFamily="@font/inter_light"
                            android:textColor="@color/white" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/feel_good"
                            android:fontFamily="@font/inter_light"
                            android:layout_marginStart="10dp"
                            android:background="@drawable/bg_text"
                            android:paddingHorizontal="10dp"
                            android:paddingVertical="8dp"
                            android:textColor="@color/white"
                            android:gravity="center"
                            android:padding="10dp"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/feel_good"
                            android:fontFamily="@font/inter_light"
                            android:layout_marginStart="10dp"
                            android:background="@drawable/bg_text"
                            android:paddingHorizontal="10dp"
                            android:paddingVertical="8dp"
                            android:textColor="@color/white"
                            android:gravity="center"
                            android:layout_marginEnd="26dp"
                            android:padding="10dp"/>

                    </LinearLayout>
                </HorizontalScrollView>

                <TextView
                    android:id="@+id/popular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/category"
                    android:fontFamily="@font/inter_bold"
                    android:text="@string/popular_today"
                    android:layout_marginStart="26dp"
                    android:layout_marginTop="20dp"
                    android:textColor="@color/white"
                    android:textSize="25sp" />

<!--                <ProgressBar-->
<!--                    android:id="@+id/progress_bar"-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:visibility="gone"-->
<!--                    tools:visibility="visible"/>-->


            </RelativeLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_popular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/header"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="20dp"
                />
        </LinearLayout>
    </ScrollView>

</FrameLayout>